added hard_coded css and apply

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,14 @@ hr {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+.hard_coded {
+	color: black; /* Base text color */
+	text-shadow: 0 0 5px orange;
+}
+.hard_coded_php {
+	color: black; /* Base text color */
+	text-shadow: 0 0 5px purple;
+}
 
 
 /*** ===================================================================================== ***/
@@ -241,15 +249,19 @@ hr {
 	text-align: center
 }
 .day_nws_ded {
-	color:blue; 
+	/* color:blue;  */
 	text-align: center;
 	font-size: 0.9em;
+	color: black; /* Base text color */
+	text-shadow: 0 0 5px orange;
 }
 .day_nws_ded_missing {
 	color:red; 
 	text-align: center;
 	font-size: 0.9em;
 }
+
+
 /*** ===================================================================================== ***/
 /*** NWS FORECAST TABLE ***/
 /*** ===================================================================================== ***/
