make late date blinking red

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,8 @@ hr {
 }
 .hard_coded_php {
 	color: black; /* Base text color */
-	text-shadow: 0 0 2px purple;
+	text-shadow: 0 0 1.5px purple;
+	font-size: 0.9em
 }
 
 
@@ -119,9 +120,9 @@ hr {
 	display: block
 }
 .flow_usgs {
-	color:orange;
+	color:orangered;
 	font-weight:bold;
-	font-size:0.8em;
+	font-size:0.9em;
 	padding-bottom: 5px;
 	display: block
 }
@@ -129,9 +130,9 @@ hr {
 	color:orange;
 }
 .flow_nws {
-	color:magenta;
+	color:darkmagenta;
 	font-weight:bold;
-	font-size:0.8em;
+	font-size:0.9em;
 	padding-bottom: 5px;
 	display: block
 }
@@ -156,7 +157,7 @@ hr {
 	display: block
 }
 .flow_usgsraw a {
-	color:orange;
+	color:orangered;
 }
 /* --------------------------- */
 .missing {
@@ -409,4 +410,36 @@ hr {
 	border: solid; 
 	color: red; 
 	border-color: #000000
+}
+
+
+.container {
+	display: grid;
+	grid-template-rows: auto 1fr auto; /* Top, middle (flexible), bottom */
+}
+.box {
+	text-align: center;
+}
+.top {
+	text-align: center;
+}
+.middle {
+	text-align: center;
+}
+.bottom {
+	text-align: center;
+}
+
+@keyframes blink {
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+}
+
+.blinking-text {
+	color: red;
+	animation: blink 1s infinite;
 }
